/**
 * # Update CLPR message queue
 *
 * ### Keywords
 * The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 * "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 * document are to be interpreted as described in
 * [RFC2119](https://www.ietf.org/rfc/rfc2119) and clarified in
 * [RFC8174](https://www.ietf.org/rfc/rfc8174).
 */
syntax = "proto3";

package org.hiero.hapi.interledger.clpr;

// SPDX-License-Identifier: Apache-2.0
option java_package = "org.hiero.hapi.interledger.clpr.protoc";
// <<<pbj.java_package = "org.hiero.hapi.interledger.clpr">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "block/stream/state_proof.proto";
import "interledger/state/clpr/clpr_ledger.proto";


/**
 * Update CLPR message queue.
 */
message ClprUpdateMessageQueueMetadataTransactionBody {
  /**
   *
   */
  org.hiero.hapi.interledger.state.clpr.ClprLedgerId ledger_id = 1;

  /**
   *
   */
  com.hedera.hapi.block.stream.StateProof message_queue_metadata_proof = 2;
}
